// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<th
  class="euiTableHeaderCell"
  scope="col"
>
  <div
    class="euiTableCellContent"
  />
</th>
`;

exports[`align renders right when specified 1`] = `
<th
  class="euiTableHeaderCell"
  scope="col"
>
  <div
    class="euiTableCellContent euiTableCellContent--alignRight"
  />
</th>
`;

exports[`renders EuiTableHeaderCell 1`] = `
<th
  aria-label="aria-label"
  class="euiTableHeaderCell testClass1 testClass2"
  data-test-subj="test subject string"
  scope="col"
>
  <div
    class="euiTableCellContent testClass1 testClass2"
  >
    children
  </div>
</th>
`;
